--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,27 +10,25 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   nav_msgs
   cv_bridge
+  image_transport
   tf2
   tf2_ros
   gazebo_ros
   visualization_msgs
-  image_transport
   message_generation
+  message_filters
 )
 
 # Find OpenCV
 find_package(OpenCV REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(cv_bridge REQUIRED)
+
 
 add_message_files(
   FILES
   ObjectLocation.msg
 )
-
-# Declare custom services if needed
-# add_service_files(
-#   FILES
-#   ObjectDetection.srv
-# )
 
 # Generate messages
 generate_messages(
@@ -57,7 +55,7 @@ catkin_package(
     gazebo_ros
     visualization_msgs
     message_runtime
-  DEPENDS OpenCV
+  DEPENDS OpenCV EIGEN3
 )
 
 # Specify include directories
@@ -65,6 +63,7 @@ include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIRS}
 )
 
 # Create the package directory structure
@@ -80,9 +79,33 @@ execute_process(
   ${CMAKE_CURRENT_SOURCE_DIR}/urdf
 )
 
-# Add executables
-# add_executable(${PROJECT_NAME}_node src/main.cpp)
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-#   ${OpenCV_LIBRARIES}
-# )
+# Add your nodes as executables
+add_executable(lane_detector_node src/Lane_Detector.cpp)
+add_executable(motion_controller_node 
+    src/MotionController.cpp
+    src/Simple_LaneChanger.cpp
+)
+add_executable(ttc_calculator_node 
+    src/TTCCalculator.cpp
+)
+# Add dependencies for message generation
+add_dependencies(lane_detector_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(motion_controller_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(ttc_calculator_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+# Link libraries for each executable
+target_link_libraries(lane_detector_node
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+)
+
+target_link_libraries(motion_controller_node
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+)
+
+target_link_libraries(ttc_calculator_node
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+  ${EIGEN3_LIBRARIES}
+)
